--- a/_page-concepts/btn-share.html
+++ b/_page-concepts/btn-share.html
@@ -16,7 +16,7 @@
 
 
 <body>
-    <div class="container-fluid">
+    <div class="halton-features-wrapper container-fluid">
 
         <div class="bottom-section-spacer"></div>
 
