pdf icon changed to external

--- a/_pages/10.html
+++ b/_pages/10.html
@@ -81,20 +81,27 @@
               <div class="bottom-section-spacer-sm"></div>
               <div class="row halton-features-wrapper">
                 <div class="col-md-3 col-sm-3 bx-container">
-                  <a
-                    target="_blank"
-                    class="link-icon icon-after icon-pdf"
-                    data-target="#past-updates"
-                    data-toggle="modal"
-                    href="#past-updates"
+                  <b>
+                    <a
+                      target="_blank"
+                      class="link-icon icon-after icon-external"
+                      data-target="#past-updates"
+                      data-toggle="modal"
+                      href="#past-updates"
+                    >
+                      See Past Updates
+                    </a></b
                   >
-                    <b> See Past Updates</b>
-                  </a>
                 </div>
                 <div class="col-md-4 col-sm-4 bx-container">
-                  <a class="link-icon icon-after icon-pdf" href="#signup">
-                    <b> Signup For Physician Email Updates</b>
-                  </a>
+                  <b>
+                    <a
+                      class="link-icon icon-after icon-external"
+                      href="#signup"
+                    >
+                      Signup For Physician Email Updates
+                    </a></b
+                  >
                 </div>
               </div>
             </div>
