--- a/_pages/2.html
+++ b/_pages/2.html
@@ -267,71 +267,70 @@
 
 
 
+
+
+
             <aside class="page-sidebar icon-summary icon-big col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bottom-section-spacer">
-                <h3 class="page-sidebar__title">Project Details</h3>
-                <!-- <div class="callout info"> -->
-                <!-- <button class="btn btn-primary" data-target="#cross" data-toggle="modal" style="margin-left:1em;"
-                        type="button"><img alt="Cross section of Britannia Road."
-                            src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx"
-                            style="border-width: 1px; border-style: solid; margin: 10px auto; height: 100px;" /></button> -->
+                <div class="halton-card card card-icon icon-before icon-info icon-big">
+                    <h3 class="component-title">Project Details</h3>
 
-                <!-- <p style="margin-left:1em;"><em>
-                            <font size="-1.5">Britannia Road cross-section</font>
-                        </em></p> -->
+                    <h4 class="page-sidebar__subtitle">Phase 1</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Complete</li>
+                        <li><strong>Start:</strong> September 2019</li>
+                        <li><strong>Ends:</strong> February 2022</li>
+                        <li><strong>Project #:</strong> PR-2667</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 1</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Complete</li>
-                    <li><strong>Start:</strong> September 2019</li>
-                    <li><strong>Ends:</strong> February 2022</li>
-                    <li><strong>Project #:</strong> PR-2667</li>
-                </ul>
+                    <h4 class="page-sidebar__subtitle">Phase 2</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Construction ongoing</li>
+                        <li><strong>Start:</strong> June 2021</li>
+                        <li><strong>Ends:</strong> December 2024</li>
+                        <li><strong>Project #:</strong> PR-3309A</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 2</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Construction ongoing</li>
-                    <li><strong>Start:</strong> June 2021</li>
-                    <li><strong>Ends:</strong> December 2024</li>
-                    <li><strong>Project #:</strong> PR-3309A</li>
-                </ul>
+                    <h4 class="page-sidebar__subtitle">Phase 3</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Construction ongoing</li>
+                        <li><strong>Start:</strong> June 2021</li>
+                        <li><strong>Ends:</strong> December 2024</li>
+                        <li><strong>Project #:</strong> PR-3309A</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 3</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Construction ongoing</li>
-                    <li><strong>Start:</strong> June 2021</li>
-                    <li><strong>Ends:</strong> December 2024</li>
-                    <li><strong>Project #:</strong> PR-3309A</li>
-                </ul>
-
-                <div class="page-sidebar-alert">
-                    <h4 class="page-sidebar-alert__title">Read More</h4>
-                    <a
-                        href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
-                        about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
-                        Assessment Study</a>.
-                </div>
+                    <div class="page-sidebar-alert">
+                        <h4 class="page-sidebar-alert__title">Read More</h4>
+                        <a
+                            href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
+                            about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
+                            Assessment Study</a>.
+                    </div>
 
 
-                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
-                    role="dialog" style="margin: 1em; display: none;" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road</h5>
-                                <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span
-                                        aria-hidden="true">&times;</span></button>
+                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
+                        role="dialog" style="margin: 1em; display: none;" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
+                                    </h5>
+                                    <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span
+                                            aria-hidden="true">&times;</span></button>
+                                </div>
+
+                                <div class="modal-body"><img alt="Cross section of Britannia Road."
+                                        src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx" />
+                                    <p style="margin-left:1em;"><em><strong>Cross section of Britannia
+                                                Road</strong></em>
+                                    </p>
+                                </div>
+
+                                <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal"
+                                        type="button">Close</button></div>
                             </div>
-
-                            <div class="modal-body"><img alt="Cross section of Britannia Road."
-                                    src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx" />
-                                <p style="margin-left:1em;"><em><strong>Cross section of Britannia Road</strong></em>
-                                </p>
-                            </div>
-
-                            <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal"
-                                    type="button">Close</button></div>
                         </div>
                     </div>
+
                 </div>
             </aside>
 
