--- a/_pages/1.html
+++ b/_pages/1.html
@@ -23,8 +23,10 @@
             <article class="halton-callout-box__wrapper">
                 <span class="halton-callout-box__subtitle">New Service</span>
                 <h2 class="halton-callout-box__title">Lorem ipsum dolor sit amet, consectetur</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna ellentesque sit amet sapien.</p>
-                <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out now</a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut et massa mi. Aliquam in hendrerit urna
+                    ellentesque sit amet sapien.</p>
+                <a href="#" class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">Check it out
+                    now</a>
             </article>
 
             <img class="halton-callout-box__img" src="/img/Calloutbox.png" alt="Calloutbox message">
@@ -34,7 +36,8 @@
         <div class="row">
             <div class="col-md-8 col-sm-8 bx-container">
                 <div class="alert alert-success alert-icon icon-before icon-big icon-info bottom-section-spacer">
-                    <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and Old Britannia
+                    <h2 class="alert-title component-title section-title">Road Closure: Intersection of Fourth Line and
+                        Old Britannia
                         Road</h2>
 
                     <p>The intersection of Fourth Line and Old Britannia Road will be closed starting <strong>June 12,
@@ -193,70 +196,66 @@
 
 
             <aside class="page-sidebar icon-summary icon-big col-sm-3 col-md-3 col-sm-offset-1 col-md-offset-1 col-lg-offset-1 bottom-section-spacer">
-                <h3 class="page-sidebar__title">Project Details</h3>
-                <!-- <div class="callout info"> -->
-                <!-- <button class="btn btn-primary" data-target="#cross" data-toggle="modal" style="margin-left:1em;"
-                        type="button"><img alt="Cross section of Britannia Road."
-                            src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx"
-                            style="border-width: 1px; border-style: solid; margin: 10px auto; height: 100px;" /></button> -->
+                <div class="halton-card card card-icon icon-before icon-info icon-big">
+                    <h3 class="component-title">Project Details</h3>
 
-                <!-- <p style="margin-left:1em;"><em>
-                            <font size="-1.5">Britannia Road cross-section</font>
-                        </em></p> -->
+                    <h4 class="page-sidebar__subtitle">Phase 1</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Complete</li>
+                        <li><strong>Start:</strong> September 2019</li>
+                        <li><strong>Ends:</strong> February 2022</li>
+                        <li><strong>Project #:</strong> PR-2667</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 1</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Complete</li>
-                    <li><strong>Start:</strong> September 2019</li>
-                    <li><strong>Ends:</strong> February 2022</li>
-                    <li><strong>Project #:</strong> PR-2667</li>
-                </ul>
+                    <h4 class="page-sidebar__subtitle">Phase 2</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Construction ongoing</li>
+                        <li><strong>Start:</strong> June 2021</li>
+                        <li><strong>Ends:</strong> December 2024</li>
+                        <li><strong>Project #:</strong> PR-3309A</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 2</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Construction ongoing</li>
-                    <li><strong>Start:</strong> June 2021</li>
-                    <li><strong>Ends:</strong> December 2024</li>
-                    <li><strong>Project #:</strong> PR-3309A</li>
-                </ul>
+                    <h4 class="page-sidebar__subtitle">Phase 3</h4>
+                    <ul class="list-v-align">
+                        <li><strong>Status:</strong> Construction ongoing</li>
+                        <li><strong>Start:</strong> June 2021</li>
+                        <li><strong>Ends:</strong> December 2024</li>
+                        <li><strong>Project #:</strong> PR-3309A</li>
+                    </ul>
 
-                <h4 class="page-sidebar__subtitle">Phase 3</h4>
-                <ul class="list-v-align">
-                    <li><strong>Status:</strong> Construction ongoing</li>
-                    <li><strong>Start:</strong> June 2021</li>
-                    <li><strong>Ends:</strong> December 2024</li>
-                    <li><strong>Project #:</strong> PR-3309A</li>
-                </ul>
-
-                <div class="page-sidebar-alert">
-                    <h4 class="page-sidebar-alert__title">Read More</h4>
-                    <a
-                        href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
-                        about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
-                        Assessment Study</a>.
-                </div>
+                    <div class="page-sidebar-alert">
+                        <h4 class="page-sidebar-alert__title">Read More</h4>
+                        <a
+                            href="/For-Residents/Roads-Construction/Municipal-Class-Environmental-Assessment-Studies/Britannia-Road-Transportation-Corridor-Improvement">Read
+                            about the Britannia Road Transportation Corridor Improvements Municipal Class Environmental
+                            Assessment Study</a>.
+                    </div>
 
 
-                <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
-                    role="dialog" style="margin: 1em; display: none;" tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road</h5>
-                                <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span
-                                        aria-hidden="true">&times;</span></button>
+                    <div aria-hidden="true" aria-labelledby="exampleModalCenterTitle" class="modal fade" id="cross"
+                        role="dialog" style="margin: 1em; display: none;" tabindex="-1">
+                        <div class="modal-dialog modal-dialog-centered" role="document" style="width:50%;">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLongTitle">Cross section of Britannia Road
+                                    </h5>
+                                    <button aria-label="Close" class="close" data-dismiss="modal" type="button"><span
+                                            aria-hidden="true">&times;</span></button>
+                                </div>
+
+                                <div class="modal-body"><img alt="Cross section of Britannia Road."
+                                        src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx" />
+                                    <p style="margin-left:1em;"><em><strong>Cross section of Britannia
+                                                Road</strong></em>
+                                    </p>
+                                </div>
+
+                                <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal"
+                                        type="button">Close</button></div>
                             </div>
-
-                            <div class="modal-body"><img alt="Cross section of Britannia Road."
-                                    src="https://www.halton.ca/getmedia/e95da8a2-8953-4935-b24f-e06e0b70fa1a/Halton_Britannia_Road_CrossSection.aspx" />
-                                <p style="margin-left:1em;"><em><strong>Cross section of Britannia Road</strong></em>
-                                </p>
-                            </div>
-
-                            <div class="modal-footer"><button class="btn btn-secondary" data-dismiss="modal"
-                                    type="button">Close</button></div>
                         </div>
                     </div>
+
                 </div>
             </aside>
 
@@ -473,12 +472,13 @@
         <div class="row bottom-section-spacer">
             <div class="col-md-9">
                 <h2 class="section-title">Promotion and education</h2>
-                <div class="halton-collapse panel-group" id="halton-accordion" role="tablist" aria-multiselectable="true">
+                <div class="halton-collapse panel-group" id="halton-accordion" role="tablist"
+                    aria-multiselectable="true">
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingOne">
                             <h4 class="panel-title">
-                                <a role="button" data-toggle="collapse" data-parent="#halton-accordion" href="#collapseOne"
-                                    aria-expanded="true" aria-controls="collapseOne">
+                                <a role="button" data-toggle="collapse" data-parent="#halton-accordion"
+                                    href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                                     Promotion and education for diversion
                                 </a>
                             </h4>
@@ -486,7 +486,8 @@
                         <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel"
                             aria-labelledby="headingOne">
                             <div class="panel-body">
-                                1--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                                1--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
                                 quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it
                                 squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
@@ -499,8 +500,9 @@
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingTwo">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#halton-accordion"
-                                    href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                <a class="collapsed" role="button" data-toggle="collapse"
+                                    data-parent="#halton-accordion" href="#collapseTwo" aria-expanded="false"
+                                    aria-controls="collapseTwo">
                                     Alternatives to by-law enforcement
                                 </a>
                             </h4>
@@ -508,7 +510,8 @@
                         <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel"
                             aria-labelledby="headingTwo">
                             <div class="panel-body">
-                                2--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                                2--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
                                 quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it
                                 squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
@@ -521,8 +524,9 @@
                     <div class="panel panel-default">
                         <div class="panel-heading" role="tab" id="headingThree">
                             <h4 class="panel-title">
-                                <a class="collapsed" role="button" data-toggle="collapse" data-parent="#halton-accordion"
-                                    href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                <a class="collapsed" role="button" data-toggle="collapse"
+                                    data-parent="#halton-accordion" href="#collapseThree" aria-expanded="false"
+                                    aria-controls="collapseThree">
                                     “Smart City” Technology
                                 </a>
                             </h4>
@@ -530,7 +534,8 @@
                         <div id="collapseThree" class="panel-collapse collapse" role="tabpanel"
                             aria-labelledby="headingThree">
                             <div class="panel-body">
-                                3--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
+                                3--- Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                                richardson ad
                                 squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck
                                 quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it
                                 squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica,
