--- a/_pages/4.html
+++ b/_pages/4.html
@@ -8,7 +8,7 @@
     <title>4.html</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link href="/dist/styles.css" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/bootstrapFramework/_bootstrap.min.css">
+    <link rel="stylesheet" href="/styles/bootstrapFramework/bootstrap-3.3.6.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/photoswipe@5.3.8/dist/photoswipe.min.css">
 </head>
 
