--- a/_pages/0.html
+++ b/_pages/0.html
@@ -31,14 +31,15 @@
             <h1>Design system</h1>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
-                    <div>
-                        For more information, contact Eric Njanga at <span class="badge badge-secondary">416 270 2901</span> or <span class="badge badge-secondary">eric.njanga@gmail.com</span>.
-                        <hr>
-                    </div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus soluta, repudiandae culpa dolore assumenda minus. A, dolorem magni! Exercitationem fugiat pariatur aut! Enim aperiam officiis aut, deleniti a voluptates et?</p>
                 </div>
             </div>
         </div>
+
+
+
+
+
 
 
         <div class="row bottom-section-spacer-md">
@@ -46,7 +47,7 @@
                 <div class="demoBoxes">
                     <div class="row">
                         <div class="col-md-3">
-                            <h3 class="component-title">Buttons</h3>
+                            <h3 class="component-title">White Buttons</h3>
                             <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <a href="#" class="btn halton-callout-box__btn">button messsage</a>
                             </div>
@@ -68,6 +69,46 @@
                             </div>
                         </div>
 
+                        <div class="col-md-3">
+                            <h3 class="component-title">Green Buttons</h3>
+                            <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
+                                <a href="#" class="btn halton-callout-box__btn">button messsage</a>
+                            </div>
+
+                            <br>
+
+                            <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
+                                <a href="#"
+                                    class="btn halton-callout-box__btn text-icon icon-before icon-arrow-right">button
+                                    messsage</a>
+                            </div>
+
+                            <br>
+
+                            <div class="elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
+                                <a href="#"
+                                    class="btn halton-callout-box__btn text-icon icon-after icon-arrow-right">button
+                                    messsage</a>
+                            </div>
+                        </div>
+ 
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div class="row bottom-section-spacer-md">
+            <div class="col-md-12">
+                <div class="demoBoxes">
+                    <div class="row">
+                       
                         <div class="col-md-3">
                             <h3 class="component-title">Links</h3>
 
@@ -133,8 +174,6 @@
 
 
 
-
-
         <div class="row bottom-section-spacer-md">
             <div class="col-md-12">
                 <div class="demoBoxes">
@@ -146,7 +185,7 @@
                             <div>
                                 <span class="badge badge-danger">Responsiveness not yet completed</span>
                             </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo at iusto deleniti hic eius explicabo corporis. Tempore quibusdam esse ipsam necessitatibus magni hic, molestiae rem suscipit sint eius, alias officiis.</p>
+                            <p>This helps standardizing the spacing between two HTML elements.</p>
                         </div>
                     </div>
 
@@ -453,6 +492,7 @@
                         
                     <div class="row bottom-section-spacer-sm">
                         <div class="col-md-6">
+                            <p>No addition needed to get the default alert.</p>
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <div class="alert bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
@@ -460,13 +500,16 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
+                            <p>Add <code>alert-success</code> to <code> class="alert ..."</code> to get the success alert.</p>
+                            <div class="bx-container elementToCopy bottom-section-spacer-sm" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <div class="alert alert-success bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
                                 </div>
                             </div>
                         </div>
+
                         <div class="col-md-6">
+                            <p>Add <code>alert-info</code> to <code> class="alert ..."</code> to get the info alert.</p>
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <div class="alert alert-info bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
@@ -474,6 +517,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
+                            <p>Add <code>alert-warning</code> to <code> class="alert ..."</code> to get the warning alert.</p>
                             <div class="bx-container elementToCopy" data-toggle="tooltip" data-placement="top" title="Click to copy HTML">
                                 <div class="alert alert-warning bottom-section-spacer-sm">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum fugit dignissimos quisquam perspiciatis nisi! Blanditiis deserunt vero unde!</p>
@@ -558,7 +602,7 @@
                 <div class="demoBoxes">
                     <div class="row bottom-section-spacer-sm">
                         <div class="col-md-6 col-md-offset-3 text-center bottom-section-spacer-sm">
-                            <h1 class="component-title">Callout</h1>
+                            <h1 class="component-title">Digital Service Callout</h1>
                             <div>
                                 <span class="badge badge-primary">Introduction text needed</span>
                             </div>
@@ -784,6 +828,97 @@
 
 
 
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <div class="row bottom-section-spacer-md">
+            <div class="col-md-12">
+                <div class="demoBoxes">
+                    <div class="row bottom-section-spacer-sm">
+                        <div class="col-md-6 col-md-offset-3 text-center bottom-section-spacer-sm">
+                            <h1 class="component-title">Modals</h1>
+                            <div>
+                                <span class="badge badge-primary">Introduction text needed</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo at iusto deleniti hic eius explicabo corporis. Tempore quibusdam esse ipsam necessitatibus magni hic, molestiae rem suscipit sint eius, alias officiis.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <div class="row bottom-section-spacer-md">
+            <div class="col-md-12">
+                <div class="demoBoxes">
+                    <div class="row bottom-section-spacer-sm">
+                        <div class="col-md-6 col-md-offset-3 text-center bottom-section-spacer-sm">
+                            <h1 class="component-title">Accordion</h1>
+                            <div>
+                                <span class="badge badge-primary">Introduction text needed</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo at iusto deleniti hic eius explicabo corporis. Tempore quibusdam esse ipsam necessitatibus magni hic, molestiae rem suscipit sint eius, alias officiis.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+        <div class="row bottom-section-spacer-md">
+            <div class="col-md-12">
+                <div class="demoBoxes">
+                    <div class="row bottom-section-spacer-sm">
+                        <div class="col-md-6 col-md-offset-3 text-center bottom-section-spacer-sm">
+                            <h1 class="component-title">Timeline</h1>
+                            <div>
+                                <span class="badge badge-primary">Introduction text needed</span>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quo at iusto deleniti hic eius explicabo corporis. Tempore quibusdam esse ipsam necessitatibus magni hic, molestiae rem suscipit sint eius, alias officiis.</p>
+                        </div>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
+
+
+        <div class="bottom-section-spacer text-center">
+            <h4>For reference:</h4>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3">
+                    <div>
+                        For more information, contact Eric Njanga at <span class="badge badge-secondary">416 270 2901</span> or <span class="badge badge-secondary">eric.njanga@gmail.com</span>.
+                        <hr>
+                    </div>
                 </div>
             </div>
         </div>
